--- a/index.html
+++ b/index.html
@@ -167,9 +167,19 @@ data-videooverlayopacity="0.4"
         <hr class="small thick">
     </div>
     <div class="spacer-small"></div>
+    <style type="text/css">
+    .thumb-overlay{
+    height: 300px;
+    overflow: hidden;
+}
+.thumb-overlay img {
+    height: 100%;
+    width: auto;
+}
+</style>
     <div class="column one-third nopadding">
         <a href="#" class="thumb-overlay text-light overlay-effect-1">
-            <img src="files/uploads/architecture-3.jpg" alt="SEO Name">
+            <img src="springer.jpg" alt="SEO Name">
             <div class="overlay-caption">
                 <h4 class="uppercase"><strong>Springer India</strong></h4>
                 <h6 class="subtitle-1">See all our resedential PortfolioSee all our resedential Portfolio See all our resedential Portfolio</h6>
@@ -178,7 +188,7 @@ data-videooverlayopacity="0.4"
     </div>
     <div class="column one-third nopadding">
         <a href="#" class="thumb-overlay text-light overlay-effect-1">
-            <img src="files/uploads/architecture-4.jpg" alt="SEO Name">
+            <img src="techexpo.jpg" alt="SEO Name">
             <div class="overlay-caption">
                 <h4 class="uppercase"><strong>BITS Hyderabad</strong></h4>
                 <h6 class="subtitle-1">We're also known for beatiful interior design</h6>
@@ -187,7 +197,7 @@ data-videooverlayopacity="0.4"
     </div>
     <div class="column one-third last-col nopadding">
         <a href="#" class="thumb-overlay text-light overlay-effect-1">
-            <img src="files/uploads/architecture-5.jpg" alt="SEO Name">
+            <img src="firsttestflight.jpg" alt="SEO Name">
             <div class="overlay-caption">
                 <h4 class="uppercase"><strong>Best Student Team</strong></h4>
                 <h6 class="subtitle-1">Our public building shows the creativity</h6>
@@ -273,7 +283,7 @@ data-videooverlayopacity="0.4"
         <div class="ch-item">
             <div class="ch-info">
                 <div class="ch-info-front ch-img-2"></div>
-                <div class="ch-info-back">
+                <div class="ch-info-back">   vf
                     <h3>You</h3>
                     <p>by Zoe Ingram <a href="http://drbl.in/eCcV">View on Dribbble</a></p>
                 </div>
@@ -313,6 +323,12 @@ data-videooverlayopacity="0.4"
             </div>
         </div>
     </li>
+    <style type="text/css">@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .ch-grid {
+        width: 100%;
+    }
+    </style>
 </ul>   
 
 <div class="spacer-big"></div>
