--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ data-videooverlayopacity="0.4"
     </div>
 </div> -->
 <ul class="ch-grid margin-left-0">
-    <li>
+    <li style=""> 
         <div class="ch-item">               
             <div class="ch-info">
                 <div class="ch-info-front ch-img-1"></div>
@@ -272,14 +272,14 @@ data-videooverlayopacity="0.4"
             </div>
         </div>
     </li>
-    <li>
+    <li style="">
         <div class="ch-item">               
             <div class="ch-info">
                <h3 class="text-center text-black">Our Notable Alumni</h3>  
             </div>
         </div>
     </li>
-    <li>
+    <li style="">
         <div class="ch-item">
             <div class="ch-info">
                 <div class="ch-info-front ch-img-2"></div>
@@ -290,7 +290,7 @@ data-videooverlayopacity="0.4"
             </div>
         </div>
     </li>
-    <li>
+    <li style="">
         <div class="ch-item">
             <div class="ch-info">
                 <div class="ch-info-front ch-img-3"></div>
@@ -301,7 +301,7 @@ data-videooverlayopacity="0.4"
             </div>
         </div>
     </li>
-     <li>
+     <li style="">
         <div class="ch-item">
             <div class="ch-info">
                 <div class="ch-info-front ch-img-4"></div>
@@ -312,7 +312,7 @@ data-videooverlayopacity="0.4"
             </div>
         </div>
     </li>
-     <li>
+     <li style="">
         <div class="ch-item">
             <div class="ch-info">
                 <div class="ch-info-front ch-img-5"></div>
@@ -323,14 +323,21 @@ data-videooverlayopacity="0.4"
             </div>
         </div>
     </li>
-    <style type="text/css">@media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    .ch-grid {
-        width: 100%;
+</ul>  
+<style>
+@media only screen and (max-width: 769px) {
+    .ch-grid li{
+    	width: 50%;
+    	height: 260px;
+    	display: inline-block;
+    	float: left;
     }
-    </style>
-</ul>   
-
+    ul li:first-child{
+    	margin-top: 0px;
+    	
+    }
+}
+</style>
 <div class="spacer-big"></div>
 <div class="fullwidth-section text-light parallax-section" data-parallax-image="files/uploads/index-main-bg-1.jpg">
     <div class="fullwidth-content wrapper-small align-center">
