--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ data-videooverlayopacity="0.4"
             <img src="files/images/springer.jpg" alt="SEO Name" class="image">
             <div class="overlay-caption">
                 <h4 class="text"><strong>SPRINGER INDIA</strong></h4>
-                <h6 class="subtitle-2">See all our resedential PortfolioSee all our resedential Portfolio See all our resedential Portfolio</h6>
+                <h6 class="text-black">See all our resedential PortfolioSee all our resedential Portfolio See all our resedential Portfolio</h6>
             </div>
         </a>
     </div>
@@ -191,7 +191,7 @@ data-videooverlayopacity="0.4"
             <img src="files/images/techexpo.jpg" alt="SEO Name" >
             <div class="overlay-caption">
                 <h4 class="text"><strong>BITS HYDERABAD</strong></h4>
-                <h6 class="subtitle-2">We're also known for beatiful interior design</h6>
+                <h6 class="text-black">We're also known for beatiful interior design</h6>
             </div>
         </a>
     </div>
@@ -200,7 +200,7 @@ data-videooverlayopacity="0.4"
             <img src="files/images/firsttestflight.jpg" alt="SEO Name" class="image">
             <div class="overlay-caption">
                 <h4 class="text"><strong>BEST STUDENT TEAM</strong></h4>
-                <h6 class="subtitle-2">Our public building shows the creativity</h6>
+                <h6 class="text-black">Our public building shows the creativity</h6>
             </div>
         </a>
     </div>
@@ -234,14 +234,18 @@ data-videooverlayopacity="0.4"
   opacity: 1;
 }
 
-.text,.subtitle-2 {
+.text, .text-black{
   background-color: #3F729B;
   border-radius: 15px 50px;
   color: white;
   padding: 16px 32px;
 }
-.subtitle-2{
-	font-weight: 900;
+.text-black{
+	font-weight: bolder;
+	font-family: "New Century Schoolbook", serif;
+	font-style: oblique;
+	font-size: 16px;
+	background-color: white;
 }
 </style>
 
