--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" type="text/css" href="files/css/mycss/bootstrap-grid.css">
     
     <!-- FONTS -->
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400italic,700italic" rel="stylesheet" type="text/css">
     
     <!-- CSS -->
     <link rel="stylesheet" id="default-style-css"  href="files/css/style.css" type="text/css" media="all" />
@@ -146,7 +146,7 @@ data-videooverlayopacity="0.4"
            <hr class="small thick">
            <p>Team Assailing Falcons is a student aero design team of VIT University. It aims at fabricating and designing <b>radio controlled</b> aircrafts. Over the span of 6 years, with immense research and advancements, the team has created some of the finest RC aircrafts. Currently, Assailing Falcons holds an overall 9th position in world rankings, issued by SAE (Society of Automotive Engineers) International. With experienced professionals and mentors, there is perfection.</p>
        </div>
-       <div class="column one-half last-col" style="background:url(files/images/whoarewe.jpg) center center;background-size:cover;">
+       <div class="column one-half last-col" style="background:url(files/images/whoarewe.jpg) center center;background-size:cover; min-height: 407px;">
 
        </div>
    </div>
