--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ data-videooverlayopacity="0.4"
        </div>
    </div>
    <div class="column-section boxed-sticky adapt-height clearfix">
-    <div class="column one-half" style="background:url(files/images/whatwedo.jpg) center center;background-size:cover;"></div>
+    <div class="column one-half" style="background:url(files/images/whatwedo.jpg) center center;background-size:cover; min-height: 407px;"></div>
     <div class="column one-half last-col bigpadding" style="background: transparent">
        <h4 class="uppercase"><strong>What We Do ?</strong></h4>
        <hr class="small thick">
